argocd-app-of-apps/cluster/irish-sea/site-apologie/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: apologie-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`apologie.the-independent-friend.de`)
      kind: Rule
      middlewares:
        - name: apologie
      services:
        - name: apologie
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-apologie-ingressroute
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`apologie.the-independent-friend.de`)
      kind: Rule
      services:
        - name: apologie
          port: 80
  tls:
    secretName: apologie

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: apologie
spec:
  redirectScheme:
    scheme: https
    permanent: true
